# palette

./: Cargo.toml
benches/: full.rs  paletted_container.rs  paletted_container_tango.rs
src/: indirect.rs  lib.rs  vec_u4.rs
tests/: block_state.rs
