[package]
name = "palette"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
arrayvec = "0.7.6"
more-asserts = "0.3.1"
snafu = "0.8.4"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"


[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"
tango-bench = "0.6.0"

#[[bench]]
#name = "paletted_container"
#harness = false

[[bench]]
name = "full"
harness = false
